--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,7 @@ counter.txt
 2016_chars.txt
 2016_words.txt
 elusa-master/
+usa_hate_discourse/count.txt
+usa_hate_discourse/trump_extensive_2020.txt
+usa_hate_discourse/2020_extensive_mention.jsonl
+usa_hate_discourse/biden_extensive_2020.txt
