--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ usa_hate_discourse/count.txt
 usa_hate_discourse/trump_extensive_2020.txt
 usa_hate_discourse/2020_extensive_mention.jsonl
 usa_hate_discourse/biden_extensive_2020.txt
+count.txt
