--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@ usa_hate_discourse/trump_extensive_2020.txt
 usa_hate_discourse/2020_extensive_mention.jsonl
 usa_hate_discourse/biden_extensive_2020.txt
 count.txt
+usa_hate_discourse/2020_extensive_mention.jsonl
+usa_hate_discourse/2020_extensive_mention_clustered.jsonl
+usa_hate_discourse/2020_sentiment_analysis.jsonl
