--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,9 @@ count.txt
 usa_hate_discourse/2020_extensive_mention.jsonl
 usa_hate_discourse/2020_extensive_mention_clustered.jsonl
 usa_hate_discourse/2020_sentiment_analysis.jsonl
+2020_sentiment_analysis.jsonl
+2020_sentiment_analysis2.jsonl
+usa_hate_discourse/2020_extensive_mention_clustered2.jsonl
+usa_hate_discourse/2020_mention_clustered.jsonl
+elusa/week.jsonl
+elusa/week.zip
