--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@ usa_hate_discourse/2020_extensive_mention_clustered2.jsonl
 usa_hate_discourse/2020_mention_clustered.jsonl
 elusa/week.jsonl
 elusa/week.zip
+elusa/week2.jsonl
+elusa/week3.jsonl
