--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,10 @@ elusa/week.jsonl
 elusa/week.zip
 elusa/week2.jsonl
 elusa/week3.jsonl
+elusa/week_model
+elusa/week_modelcopy
+elusa/week1p1_model
+elusa/week1p1.jsonl
+elusa/week1p2_model
+elusa/week1p2.jsonl
+elusa/week1p3.jsonl
