--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,6 @@ elusa/week1p1.jsonl
 elusa/week1p2_model
 elusa/week1p2.jsonl
 elusa/week1p3.jsonl
+elusa/week1p3_model
+elusa/week1.zip
+elusa/counter2.txt
