redid the dates, one roll per day

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,14 @@ elusa/week1p3.jsonl
 elusa/week1p3_model
 elusa/week1.zip
 elusa/counter2.txt
+elusa/week2.csv
+elusa/week_model2copy
+elusa/sample.jsonl
+elusa/week1d1.jsonl
+elusa/week1d2.jsonl
+elusa/week1d3.jsonl
+elusa/week1d4.jsonl
+elusa/week1d5.jsonl
+elusa/week1d6.jsonl
+elusa/week1d7.jsonl
+dates_count.csv
