--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,17 @@ elusa/week1d5.jsonl
 elusa/week1d6.jsonl
 elusa/week1d7.jsonl
 dates_count.csv
+elusa/week2d1.jsonl
+elusa/week2d2.jsonl
+elusa/week2d3.jsonl
+elusa/week2d4.jsonl
+elusa/week2d5.jsonl
+elusa/week2d6.jsonl
+elusa/week2d7.jsonl
+elusa/week3d1.jsonl
+elusa/week3d2.jsonl
+elusa/week3d3.jsonl
+elusa/week3d4.jsonl
+elusa/week3d5.jsonl
+elusa/week3d6.jsonl
+elusa/week3d7.jsonl
