--- a/.gitignore
+++ b/.gitignore
@@ -53,7 +53,6 @@ elusa/week1p3.jsonl
 elusa/week1p3_model
 elusa/week1.zip
 elusa/counter2.txt
-elusa/week2.csv
 elusa/week_model2copy
 elusa/sample.jsonl
 elusa/week1d1.jsonl
@@ -78,3 +77,6 @@ elusa/week3d4.jsonl
 elusa/week3d5.jsonl
 elusa/week3d6.jsonl
 elusa/week3d7.jsonl
+elusa/week2_model
+elusa/week3_model
+elusa/week2copy.csv
